--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
-
 {
-  "scripts": {
-    "start": "nodemon main.js",
-    "dev": "nodemon main.js"
+ "scripts": {
+    "start": "node main.js",
+    "dev": "nodemon main.js",
+    "build": "echo 'No build step required'",
+    "render-postbuild": "echo 'Postbuild step for Render'",
+    "help": "npm run | grep -E 'start|dev|build|render-postbuild|help'"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
